﻿2.1.0 [TBD]
[-] Drop support for net452.

2.0.1 [2019-01-24]
[*] Fix SmtpClientEmailSender sync mode exceptions handle.

2.0.0 [2019-01-23]
[*] Rename SaveToFileEmailInterceptor to SaveToFileEmailsInterceptor.
[*] Change design of ApprovedEmailPatternsInterceptor.
[+] Add DeniedEmailPatternsInterceptor and DelegateFilterInterceptor.

1.1.0 [2018-12-28]
[+] SourceLink support.
[*] Add ConfigureAwait = false for most async calls.
[+] Add SmtpClientEmailSender.UseSyncMode property.

1.0.0 [2018-09-28]
[*] Make IEmailInterceptor interface async.
[*] Introduce cancellation token to IEmailSender.
[*] Comments update.

0.2.1 [2018-09-28]
[*] Fix SMTP client clone with default credentials.

0.2.0 [2017-08-31]
[+] Upgrade to netstandard 2.0, remove MailMessage stubs.
[+] Implement throttling for SmtpClientEmailSender.

0.1.2 [2017-02-11]
[*] MultiSmtpClientEmailSender now sets ServicePoint.ConnectionLimit to make separates connections.
[*] Make SaveToFileEmailInterceptor thread safe.
[+] Fix SmtpClientEmailSender.MaxQueueSize property declaration.
[+] Add Send extension method to IEmailSender interface.

0.1.1 [2016-12-21]
[*] SmtpClientEmailSender now supports multithread mode.
[+] Add MultiSmtpClientEmailSender class.

0.1.0 [2016-12-20]
[+] Initial release.