@@ -1,4 +1,4 @@
-﻿// Copyright (c) 2015-2017, Saritasa. All rights reserved.
+﻿// Copyright (c) 2015-2020, Saritasa. All rights reserved.
 // Licensed under the BSD license. See LICENSE file in the project root for full license information.
 
 using System;
@@ -14,15 +14,6 @@ namespace Saritasa.Tools.Emails
     public class DummyEmailSender : EmailSender
     {
         /// <inheritdoc />
-        protected override Task Process(MailMessage message, IDictionary<string, object> data)
-        {
-#if NET452
-            var tcs = new TaskCompletionSource<bool>();
-            tcs.SetResult(true);
-            return tcs.Task;
-#else
-            return Task.CompletedTask;
-#endif
-        }
+        protected override Task Process(MailMessage message, IDictionary<string, object>? data) => Task.CompletedTask;
     }
 }
