@@ -1,4 +1,4 @@
-﻿// Copyright (c) 2015-2018, Saritasa. All rights reserved.
+﻿// Copyright (c) 2015-2020, Saritasa. All rights reserved.
 // Licensed under the BSD license. See LICENSE file in the project root for full license information.
 
 using System;
@@ -34,7 +34,7 @@ namespace Saritasa.Tools.Emails.Interceptors
             CancellationToken cancellationToken)
         {
             Interlocked.Increment(ref sendingCallCount);
-            return Internals.TaskHelpers.CompletedTask;
+            return Task.CompletedTask;
         }
 
         /// <inheritdoc />
@@ -42,7 +42,7 @@ namespace Saritasa.Tools.Emails.Interceptors
             CancellationToken cancellationToken)
         {
             Interlocked.Increment(ref sentCallCount);
-            return Internals.TaskHelpers.CompletedTask;
+            return Task.CompletedTask;
         }
 
         #endregion
