@@ -1,4 +1,4 @@
-﻿// Copyright (c) 2015-2019, Saritasa. All rights reserved.
+﻿// Copyright (c) 2015-2020, Saritasa. All rights reserved.
 // Licensed under the BSD license. See LICENSE file in the project root for full license information.
 
 using System;
@@ -50,12 +50,12 @@ namespace Saritasa.Tools.Emails.Interceptors
             {
                 cancel = true;
             }
-            return Internals.TaskHelpers.CompletedTask;
+            return Task.CompletedTask;
         }
 
         /// <inheritdoc />
         public virtual Task SentAsync(MailMessage mailMessage, IDictionary<string, object> data,
-            CancellationToken cancellationToken) => Internals.TaskHelpers.CompletedTask;
+            CancellationToken cancellationToken) => Task.CompletedTask;
 
         #endregion
 
